--- a/Linkedin-Demo/index.html
+++ b/Linkedin-Demo/index.html
@@ -95,7 +95,7 @@
               aria-expanded="false"
             >
               <img class="rounded-circle"
-                src="/img/Snapchat-1738240748.jpg"
+                src="./img/Snapchat-1738240748.jpg"
                 style="
                   width: 25px;
                   height: 25px;
